--- a/index.html
+++ b/index.html
@@ -78,23 +78,23 @@
         <img src="assets/sk8-1.png" alt=green></img>
 
     </div>
-    <div id="formsheet">
-        <div class="contact"><h1>Contact Us for More Information</h1>
-        <h2>Lorem ipsum, dolor sit amet consectetur 
-            adipisicing elit. Et, error ad quaerat 
-            architecto sit eum pariatur. Velit, ullam 
-            autem ipsam, corrupti accusantium obcaecati 
-            iste similique nam dicta sequi aliquid. Sit?</h2>
-            </div>
-        <div class="forms">
-            <input type="text" name="name" placeholder="NAME"></input><br>
-            <input type="email" name="email" placeholder="EMAIL"></input><br>
-            <textarea name="Message" placeholder="YOUR MESSAGE"></textarea>
-
+    <div id="bottomcolumn">
+        <div class="Contact">
+            <h1>Contact Us for More Information</h1>
+            <p>Lorem ipsum, dolor sit amet consectetur 
+                adipisicing elit. Et, error ad quaerat 
+                architecto sit eum pariatur. Velit, ullam 
+                autem ipsam, corrupti accusantium obcaecati 
+                iste similique nam dicta sequi aliquid. Sit?<p>
         </div>
-        </div>    
+            <form class="forms">
+                <input type="text" name="name" placeholder="NAME"></input>
+                <input type="email" name="email" placeholder="EMAIL"></input>
+                <textarea name="Message" placeholder="YOUR MESSAGE"></textarea>
+                <button>SUBMIT</button>
+            </form>       
+    </div>
 
-    </div>     
 
 </div>
 
